<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/ll_1"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="15dp"
              android:paddingBottom="15dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_marginRight="5dp"
        android:id="@+id/iv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_white_48dp"/>
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mr.Codey"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@+id/iv_head"
        />
    <TextView
        android:id="@+id/tv_address"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@+id/iv_head"
        android:layout_below="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请设置地区"
        android:padding="5dp"
        android:textSize="12sp"
        />
    </RelativeLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#ffffff"
    ></View>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RelativeLayout
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/tv_initiate_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/tv_initiate"
            android:layout_below="@+id/tv_initiate_num"
            android:text="@string/initiate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/tv_support_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/tv_support"
                android:layout_below="@+id/tv_support_num"
                android:text="@string/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_fans_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="99"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/tv_fans"
                android:layout_below="@+id/tv_fans_num"
                android:text="@string/fans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_attention_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/tv_attention"
                android:layout_below="@+id/tv_attention_num"
                android:text="@string/attention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/tv_credit_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="88"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/tv_credit"
                android:layout_below="@+id/tv_credit_num"
                android:text="@string/credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        ></View>
    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_chrome_reader_mode_white_18dp"
            android:id="@+id/iv_wd_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_record"
            android:textColor="@android:color/white"
            android:layout_marginLeft="15dp"
            android:text="@string/withdrawals_record"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/iv_wd_record"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_mode_edit_white_18dp"
            android:id="@+id/iv_edit_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_edit_data"
            android:textColor="@android:color/white"
            android:layout_marginLeft="15dp"
            android:text="@string/edit_info"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/iv_edit_info"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_center_focus_weak_white_18dp"
            android:id="@+id/iv_sweep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_qr_code"
            android:textColor="@android:color/white"
            android:layout_marginLeft="15dp"
            android:text="@string/sweep"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/iv_sweep"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_star_border_white_18dp"
            android:id="@+id/iv_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@android:color/white"
            android:layout_marginLeft="15dp"
            android:text="@string/my_collect"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/iv_collect"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_collect"/>
    </RelativeLayout>

    <!--    <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_icon"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_title"/>-->

</LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_setting"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/ll_1"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:src="@drawable/ic_settings_applications_white_18dp"
            android:id="@+id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_setting"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_margin="10dp"
            android:text="@string/settings"
            android:layout_toRightOf="@+id/iv_setting"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/rl_setting"
        android:layout_alignTop="@+id/rl_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:src="@drawable/ic_help_outline_white_18dp"
            android:id="@+id/iv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_how"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_margin="10dp"
            android:text="@string/how"
            android:layout_toRightOf="@+id/iv_help"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    </RelativeLayout>