<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="#28D67D"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/iv_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_group_white_48dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_team"
                android:text="@string/team"
                android:textColor="#ffffff"
                android:textSize="13sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:background="#D7814B"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <ImageView
                android:id="@+id/iv_fund"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_group_white_48dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_fund"
                android:text="@string/fund"
                android:textColor="#ffffff"
                android:textSize="13sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:background="#D7BF65"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/iv_tool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_group_white_48dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_tool"
                android:text="@string/tool"
                android:textColor="#ffffff"
                android:textSize="13sp"
                />
        </RelativeLayout>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lv_rank"
        ></ListView>

</LinearLayout>