<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="25"
        android:background="#2196F3"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingRight="20dp"
            android:src="@drawable/ic_chevron_left_white_36dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_centerVertical="true"
            android:id="@+id/project_name"
            android:text="@string/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:layout_toRightOf="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_centerVertical="true"
            android:id="@+id/project_intro"
            android:text="@string/project_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:layout_toRightOf="@+id/project_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_centerVertical="true"
            android:id="@+id/project_img"
            android:text="@string/project_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/pic"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/project_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_4"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_centerVertical="true"
            android:id="@+id/project_category"
            android:text="@string/project_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/button1"
            android:layout_toRightOf="@+id/project_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="筹人"
            />
        <Button
            android:textSize="12sp"
            android:layout_toRightOf="@+id/button1"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="筹钱"
            />
        <Button
            android:textSize="12sp"
            android:layout_toRightOf="@+id/button2"
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="筹物"
            />
        <!--<ImageView
            android:src="@drawable/pic"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/project_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>-->

    </RelativeLayout>
    <Button
        android:id="@+id/bt_ok"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/rl_4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="OK!"
        />
</RelativeLayout>