<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:alpha="25"
        android:background="#2196F3"
        >

        <ImageView
            android:id="@+id/iv_person_info"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_person_white_48dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="众筹"
            android:textSize="20sp"
            android:textColor="#fff"
            android:gravity="center"/>

    </RelativeLayout>
    <FrameLayout
        android:layout_below="@+id/rl_top"
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frameLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#ffffff">
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:showDividers="middle"
            android:dividerPadding="0dp"
            android:divider="@drawable/divder"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            >

            <FrameLayout
                android:id="@+id/layout_home"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="1.0dip"
                    android:src="@drawable/ic_menu_emoticons"/>

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="6.0dip"
                    android:text="@string/home"
                    android:textSize="12sp"
                    android:textColor="#959595"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_rank"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/iv_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="1.0dip"
                    android:src="@drawable/ic_menu_emoticons"/>

                <TextView
                    android:id="@+id/tv_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="6.0dip"
                    android:text="@string/ranking"
                    android:textColor="#959595"
                    android:textSize="12sp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_label"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/iv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="1.0dip"
                    android:src="@drawable/ic_menu_emoticons"/>

                <TextView
                    android:id="@+id/tv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="6.0dip"
                    android:text="@string/label"
                    android:textColor="#959595"
                    android:textSize="12sp"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_msg"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/iv_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="1.0dip"
                    android:src="@drawable/ic_menu_emoticons"/>

                <TextView
                    android:id="@+id/tv_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="6.0dip"
                    android:text="@string/message"
                    android:textColor="#959595"
                    android:textSize="12sp"/>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-10dp"
        android:src="@drawable/add_cicle"/>

</RelativeLayout>
